<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ua.odessa.tol2000.moneyto.AddMenuActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_add_menu_report2Button_text"
        android:id="@+id/report2Button"
        android:layout_column="1"
        android:layout_row="1"
        android:onClick="report2ButtonClick" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_add_menu_report1Button_text"
        android:id="@+id/report1Button"
        android:layout_column="1"
        android:layout_row="2"
        android:onClick="report1ButtonClick"
        android:enabled="false" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_add_menu_exportDbButton_text"
        android:id="@+id/exportDbButton"
        android:layout_column="1"
        android:layout_row="25"
        android:onClick="exportDbButtonClick" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_add_menu_importDbButton_text"
        android:id="@+id/importDbButton"
        android:layout_column="1"
        android:layout_row="26"
        android:onClick="importDbButtonClick" />

</GridLayout>
