<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ua.odessa.tol2000.moneyto.ImportActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/activity_import_tv1_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_import_tvImportDir_text"
            android:id="@+id/tvImportDir"
            android:layout_marginTop="10sp" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="262dp"
                android:layout_height="wrap_content"
                android:id="@+id/edImpDirTo"
                android:layout_gravity="left|right" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="..."
                android:id="@+id/selButton"
                android:onClick="dirChooseClick" />
        </GridLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_import_importRunButton_text"
            android:id="@+id/importRunButton"
            android:onClick="importRunButtonClick"
            android:focusable="true"
            android:focusableInTouchMode="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="****************"
            android:id="@+id/tvInfo" />
    </LinearLayout>
</RelativeLayout>
