<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ua.odessa.tol2000.moneyto.Report1Activity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_report1_tvDateFrom_text"
            android:id="@+id/tvDateFrom" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edDateFrom" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_report1_tvDateTo_text"
            android:id="@+id/tvDateTo" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edDateTo" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_report1_reportButtonRun_text"
            android:id="@+id/reportButtonRun"
            android:onClick="reportButtonRunClick" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <GridView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reportGridView"
                android:numColumns="4"
                android:nestedScrollingEnabled="false"
                android:smoothScrollbar="false"
                android:scrollingCache="false"
                android:fastScrollAlwaysVisible="false"
                android:fastScrollEnabled="false"
                android:choiceMode="none"
                android:stackFromBottom="false"
                android:textFilterEnabled="false"
                android:stretchMode="columnWidth"
                android:verticalSpacing="1sp" />
        </FrameLayout>

    </LinearLayout>
</RelativeLayout>
