<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/activity_main_tv1_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/tv1"
                    android:textSize="15sp"
                    android:textIsSelectable="false"
                    android:gravity="center_vertical" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:ems="10"
                    android:id="@+id/ed1"
                    android:textSize="17sp"
                    android:inputType="datetime"
                    android:enabled="true" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffe2ffe3">

                <TextView
                    android:text="@string/activity_main_tv2_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/tv2"
                    android:textSize="15sp"
                    android:textIsSelectable="false"
                    android:gravity="center_vertical" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/ed2"
                    android:textSize="15sp"
                    android:enabled="true" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/activity_main_tv3_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/tv3"
                    android:textSize="15sp"
                    android:textIsSelectable="false"
                    android:gravity="center_vertical" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:ems="10"
                    android:id="@+id/ed3"
                    android:textSize="15sp"
                    android:enabled="true"
                    android:singleLine="true" />
            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:stretchColumns="0"
            android:layout_weight="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_main_addbutton_text"
                    android:id="@+id/addbutton"
                    android:onClick="addbuttonDataClick"
                    android:layout_column="0"
                    android:focusable="true"
                    android:focusableInTouchMode="false"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_weight="1"
                    android:layout_marginTop="5sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/scrollView2">

                    <TextView
                        android:text="@string/activity_main_tvMessage_text_init"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvMessage"
                        android:textSize="15sp"
                        android:textIsSelectable="false"
                        android:layout_marginTop="5sp"
                        android:singleLine="false" />
                </ScrollView>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_main_addMenuButton_text"
                    android:id="@+id/addMenuButton"
                    android:onClick="addMenuButtonClick"
                    android:focusable="true"
                    android:focusableInTouchMode="false"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvInfo"
                    android:textSize="10sp"
                    android:textIsSelectable="false"
                    android:elegantTextHeight="false"
                    android:text="\n\n" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

</RelativeLayout>
