<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ua.odessa.tol2000.moneyto.Report2Activity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="false"
            android:stretchColumns="4">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/spSort"
                    android:spinnerMode="dropdown"
                    android:layout_column="0"
                    android:layout_weight="1" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/edDesc"
                    android:layout_column="1"
                    android:hint="@string/activity_report2_edDesc_init_text"
                    android:singleLine="true"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/edDateFrom"
                    android:layout_column="0"
                    android:text="1900-01-01" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="-"
                    android:id="@+id/textView"
                    android:gravity="center_vertical"
                    android:layout_column="1"
                    android:layout_weight="1" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/edDateTo"
                    android:layout_row="2"
                    android:layout_column="2"
                    android:text="1900-01-01" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/activity_report2_reportButtonRun_text"
                    android:id="@+id/reportButtonRun"
                    android:onClick="reportButtonRunClick"
                    android:singleLine="true"
                    android:focusable="true"
                    android:focusableInTouchMode="false"
                    android:layout_column="3" />
            </TableRow>
        </TableLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/scrollView"
            android:layout_weight="1">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/horizontalScrollView" >

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tbl1"
                    android:measureWithLargestChild="false"
                    android:minHeight="150sp"
                    android:minWidth="150sp">
                </TableLayout>
            </HorizontalScrollView>
        </ScrollView>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="3"
            android:layout_gravity="bottom">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/activity_report2_tvDel_text"
                    android:id="@+id/tvDel"
                    android:lines="1"
                    android:layout_column="0"
                    android:gravity="center_vertical" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/edDel"
                    android:inputType="number"
                    android:layout_weight="1"
                    android:lines="1"
                    android:layout_column="1" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/delButton"
                    android:text="@string/activity_report2_delButton_text"
                    android:lines="1"
                    android:layout_weight="1"
                    android:onClick="delButtonRunClick"
                    android:focusable="true"
                    android:focusableInTouchMode="false"
                    android:layout_column="2" />

            </TableRow>
        </TableLayout>

    </LinearLayout>

</RelativeLayout>
